o Integration test passes, without OGNL property-setter support...
TODO: Get support for object-property configuration using OGNL, instead of using a properties Map parameter for the exec method.